--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,3 +30,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @continuum-restore 'on'
+ 
+run-shell ~/clone/path/resurrect.tmux
+
